--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font.css" type="text/css" media="all">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style.css" type="text/css" media="all">
+  <link rel="stylesheet" href="{{ SITEURL }}/theme/css/custom.css" type="text/css" media="all">
 
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -131,22 +132,8 @@
         </div>
       </nav><!-- .site-navigation -->
 
-      <div class="container">
-      <div id="logo">
-        <span class="site-name"><a class="navbar-brand" href="{{ SITEURL }}"><img width="310" src="{{ USER_LOGO_URL }}" class="attachment-full size-full" alt="logo">          </a>
-        </span><!-- end of .site-name -->
-      </div><!-- end of #logo -->
-        <div class="tagline">
-            {% if TAGS_URL %}
-              {% for tag, articles in tags|sort %}
-                <a href="{{ SITEURL }}/{{ tag.url }}" {{ 'class="active"' if  output_file == tag.url }}>{{ tag }} ({{ articles|count }})</a> &#124; 
-              {% endfor %}
-            {% endif %}
-            {% if ARCHIVES_URL %}
-                <a href="{{ SITEURL }}/{{ ARCHIVES_URL }}" {{ 'class="active"' if  output_file == ARCHIVES_URL }}>{{ 'Archives ('+ articles|count|string + ')' if  articles|count > all_articles|count  else 'Archives (' + all_articles|count|string + ')'}}</a>
-            {% endif %}
-        </div>
-    </div>
+      {% block banner %}
+      {% endblock %}
 
   </header><!-- #masthead -->
   </div>
