--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,37 @@
 {% block metatitle %}{{ SITENAME }}{% endblock %}
 {% block title %}{{ SITENAME }}{% endblock %}
 
+{% block banner %}
+<div class="container">
+  <div id="logo">
+    <span class="site-name"><a class="navbar-brand" href="{{ SITEURL }}"><img width="310" src="{{ USER_LOGO_URL }}" class="attachment-full size-full" alt="logo">          </a>
+    </span><!-- end of .site-name -->
+  </div><!-- end of #logo -->
+  	<div class="tagline">
+  		<header class="entry-header page-header">
+  			<h1 class="entry-title">Latest news</a></h1>
+  		</header>
+    </div>
+
+    <!-- {% include 'news.md' %} -->  ## TODOOOOOOOO
+
+  	<div class="tagline">
+  		<header class="entry-header page-header">
+  			<h1 class="entry-title">Blog</a></h1>
+  		</header>
+    
+        {% if TAGS_URL %}
+          {% for tag, articles in tags|sort %}
+            <a href="{{ SITEURL }}/{{ tag.url }}" {{ 'class="active"' if  output_file == tag.url }}>{{ tag }} ({{ articles|count }})</a> &#124; 
+          {% endfor %}
+        {% endif %}
+        {% if ARCHIVES_URL %}
+            <a href="{{ SITEURL }}/{{ ARCHIVES_URL }}" {{ 'class="active"' if  output_file == ARCHIVES_URL }}>{{ 'Archives ('+ articles|count|string + ')' if  articles|count > all_articles|count  else 'Archives (' + all_articles|count|string + ')'}}</a>
+        {% endif %}
+    </div>
+</div>
+{% endblock %}
+
 {% block content %}
 {% for article in articles_page.object_list %}
 <article class="post">
